--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div ng-repeat="recipie in recipies" class="col-xl-6 col-lg-6 col-md-6 col-sm-8 col-xs-8 offset-xl-3 offset-lg-3 offset-md-3 offset-sm-2 offset-xs-2">
             <div class="media">
                 <a class="media-left waves-light">
-                    <img class="img-thumbnail" src={{recipie.image}} alt="Responsive image">
+                    <img class="img-circle img--responsiv" src={{recipie.image}} alt="Responsive image">
                 </a>
                 <div class="media-body">
                     <h4 class="media-heading">{{recipie.title}}</h4>
