--- a/index.html
+++ b/index.html
@@ -91,6 +91,31 @@
             </div>
         </div>
         </div>
+        </br>
+        </br>
+        <footer class="page-footer green center-on-small-only">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h5 class="title">SmartCook.com</h5>
+                        <p>Smart Cook is an application to search recipes by ingredients, ie you put the ingredients you have in your house and you get recipes you can do with them!</p>
+                    </div>
+                    <div class="col-md-6">
+                        <h5 class="title">Links</h5>
+                        <ul>
+                            <li><a href="#!">Home</a></li>
+                            <li><a href="#!">Search Recipies</a></li>
+                            <li><a href="#!">About</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-copyright">
+                <div class="container-fluid">
+                    © 2015 Copyright: <a href="http://www.MDBootstrap.com"> SmartCook.com </a>
+                </div>
+            </div>
+        </footer>
     </div>
 </div>
 </body>
